[package]
authors = ["Michael Zhang <iptq@protonmail.com>", "Nathan Ringo <remexre@protonmail.com>"]
description = "Derives for the packer crate"
documentation = "https://docs.rs/packer"
edition = "2018"
license = "MIT"
name = "packer_derive"
repository = "https://github.com/iptq/packer"
version = "0.4.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["derive"] }
walkdir = "2.2"
