[package]
authors = ["Michael Zhang <iptq@protonmail.com>", "Nathan Ringo <remexre@protonmail.com>"]
description = "Derives for the packer crate"
documentation = "https://docs.rs/packer"
edition = "2018"
license = "MIT"
name = "packer_derive"
repository = "https://github.com/iptq/packer"
version = "0.4.0"

[lib]
proc-macro = true

[features]
default = ["ignore"]
always_pack = []
ignore = ["glob"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = { version = "0.15", features = ["derive"] }
walkdir = "2.2"
glob = { version = "0.3", optional = true }
